TEST_PROGRAMS/INVALID/06/invalid1.go
//no package decl

func main(){
	print("helloworld")
}
